reafactor tests to pass with prepend new line on sql being dropped